# graphql_mongodb_demo

./: .env  Cargo.toml
src/: main.rs
src/api/: graphql_api.rs  mod.rs  rest_api.rs
src/models/: user_model.rs
src/repository/: graphql_repo.rs  mod.rs  mongodb_repo.rs
