[package]
name = "learning_graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.5"
actix-web = "4.4.0"
bson = { version = "2.8.0", features = ["chrono-0_4"] }
chrono = "0.4.31"
dotenv = "0.15.0"
env_logger = "0.10.1"
futures = "0.3.29"
juniper = "0.15.11"
mongodb = "2.8.0"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = "1.35.0"
